more work on gauntlet

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -145,14 +145,15 @@
 
   </div>
 
-  <section class="position-relative p-5 p-md-8 bg-purple text-white">
+  <section
+    class="position-relative px-5 py-8 p-md-8 bg-purple text-white text-center text-md-left">
     <div class="fullscreen bg-black o-90"></div>
     <div class="d-grid grid-cols-1 grid-cols-md-2 bring-forward">
       <div>
         <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo"
           class="mb-3" style="width: 40px; max-width: 40px" />
         <h6 class="font-black text-uppercase">NewSpring Church</h6>
-        <p class="font-sans font-black tracking-tight text-uppercase">
+        <p class="font-sans font-black tracking-tight text-uppercase mb-0">
           <small><a href="https://www.rockrms.com"
               class="text-white text-hover-white text-decoration-none"
               target="_blank">Built on
