--- a/gauntlet.html
+++ b/gauntlet.html
@@ -41,32 +41,92 @@
   <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
 </head>
 
-<body class="bg-purple">
+<body id="top" class="bg-slate">
+  <style>
+    :root {
+      --color-fuscia: #e854be;
+      --color-blue: #215cd7;
+      --color-beige: #ede9d7;
+      --color-amber: #fd8a1a;
+      --color-red: #dd0e23;
+      --color-green: #618a00;
+      --color-yellow: #ffc240;
+      --color-purple: #8e69fb;
+      --color-purple: #6843d8;
+      --color-sky: #acdde5;
+      --color-slate: #202427;
+      --color-pink: #f687a8;
+      --color-orange: #f05421;
+      --color-lime: #b9d956;
+
+      --primary: var(--color-orange);
+      --secondary: var(--color-purple);
+    }
+
+    .bg-primary {
+      background-color: var(--primary) !important;
+    }
+
+    .bg-secondary {
+      background-color: var(--secondary) !important;
+    }
+
+    .btn-primary {
+      position: relative;
+      background-color: var(--primary);
+      color: #fff;
+      overflow: hidden;
+      opacity: 1;
+    }
+
+    .btn-primary:hover,
+    .btn-primary:active,
+    .btn-primary:focus {
+      background-color: var(--primary);
+    }
+
+    .btn-secondary {
+      position: relative;
+      background-color: var(--secondary);
+      color: #fff;
+      overflow: hidden;
+      opacity: 1;
+    }
+
+    .btn-secondary:hover,
+    .btn-secondary:active,
+    .btn-secondary:focus {
+      background-color: var(--secondary);
+    }
+  </style>
 
   <!-- Gauntlet Navigation -->
-  <section class="position-relative bg-purple bring-forward w-100 p-5 p-lg-3">
+  <section
+    class="position-fixed bg-secondary w-100 p-5 px-sm-6 px-lg-3 py-lg-5 o-90"
+    style="z-index: 9999;">
     <div class="fullscreen bg-black o-0"></div>
     <div
       class="page-constrained mx-auto d-flex flex-column flex-lg-row justify-content-between align-items-center gap-y-5 w-100">
-      <img src="/Themes/new/Assets/SVG/gauntlet/gauntlet-wordmark-light.svg"
-        alt="Gauntlet Logo" class="bring-forward w-100"
-        style="max-width: 250px;">
+      <a href="#top">
+        <img src="/Themes/new/Assets/SVG/gauntlet/gauntlet-wordmark-light.svg"
+          alt="Gauntlet Logo" class="bring-forward w-100"
+          style="max-width: 200px;"></a>
       <ul
         class="bring-forward d-flex flex-column flex-lg-row align-items-center gap-x-3 list-unstyled mb-0">
-        <li><a href="#about"
-            class="d-inline-block h6 text-uppercase p-2 text-white text-decoration-none font-sans font-black tracking-tight mb-0">About</a>
+        <li><a href="#about" data-scroll
+            class="d-inline-block text-uppercase p-2 text-white text-decoration-none font-sans font-black mb-0">About</a>
         </li>
-        <li><a href="#go"
-            class="d-inline-block h6 text-uppercase p-2 text-white text-decoration-none font-sans font-black tracking-tight mb-0">Go</a>
+        <li><a href="#go" data-scroll
+            class="d-inline-block text-uppercase p-2 text-white text-decoration-none font-sans font-black mb-0">Go</a>
         </li>
-        <li><a href="#serve"
-            class="d-inline-block h6 text-uppercase p-2 text-white text-decoration-none font-sans font-black tracking-tight mb-0">Serve</a>
+        <li><a href="#serve" data-scroll
+            class="d-inline-block text-uppercase p-2 text-white text-decoration-none font-sans font-black mb-0">Serve</a>
         </li>
-        <li><a href="#give"
-            class="d-inline-block h6 text-uppercase p-2 text-white text-decoration-none font-sans font-black tracking-tight mb-0">Give</a>
+        <li><a href="#give" data-scroll
+            class="d-inline-block text-uppercase p-2 text-white text-decoration-none font-sans font-black mb-0">Give</a>
         </li>
-        <li><a href="#sign-up"
-            class="d-inline-block h6 text-uppercase btn btn-primary text-decoration-none font-sans font-black tracking-tight mb-0">Sign
+        <li><a href="#"
+            class="d-inline-block text-uppercase py-2 px-4 rounded-full text-white text-decoration-none font-sans font-black mb-0 bg-primary">Sign
             Up</a></li>
       </ul>
     </div>
@@ -75,98 +135,126 @@
   <div id="content">
 
     <!-- Hero -->
-    <section
-      class="position-relative d-flex justify-content-center align-items-center ratio-tall ratio-sm-square ratio-md-video ratio-lg-landscape bg-purple text-white overflow-hidden">
-      <div class="fullscreen background-cover background-center o-20 grayscale"
+    <section class="p-0 position-relative bg-white text-white overflow-hidden">
+      <div class="fullscreen background-cover background-center o-10 grayscale"
         style="background-image: url('https://images.unsplash.com/photo-1519530782816-ba0c305fbb0d?q=80&w=2500&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
       </div>
       <div class="fullscreen bg-black o-10"></div>
-      <div class="text-constrained text-center bring-forward">
-        <img src="/Themes/new/Assets/SVG/gauntlet/see-u-at-gauntlet-light.svg"
-          alt="" class="w-100 mb-5" style="max-width: 700px;">
-        <a href="">
-          <span class="text-orange fa-stack fa-2x">
-            <i class="fa-solid fa-circle fa-stack-2x fa-inverse"></i>
-            <i class="fa-solid fa-circle-play fa-stack-2x"></i>
-          </span>
-        </a>
-      </div>
-    </section>
+      <div class="page-constrained mx-auto">
+        <div
+          class="p-5 d-flex justify-content-center align-items-center ratio-tall ratio-sm-square ratio-md-video ratio-lg-shuare  bring-forward">
+          <div class="text-constrained text-center">
+            <img
+              src="/Themes/new/Assets/SVG/gauntlet/see-u-at-gauntlet-light.svg"
+              alt="" class="hidden w-100" style="max-width: 600px;"><br>
+            <img src="/Themes/new/Assets/SVG/gauntlet/gauntlet-mark-bm.svg"
+              alt="Gauntlet Logo" class="w-100" style="max-width: 400px;">
 
-    <section id="about" class="p-0 bg-white">
-      <div class="">
-        <div class="d-grid grid-cols-1 grid-cols-lg-2">
-          <div
-            class="bg-white d-flex justify-content-center align-items-center">
-            <div class="p-8 text-constrained mx-auto text-center text-md-right">
-              <h2 class="display-2 text-fuscia">What is Gauntlet?</h2>
-              <p>Gauntlet is a week-long student summer camp
-                experience for
-                rising
-                seventh
-                grade students through graduated seniors. Students from across
-                South
-                Carolina will get together for a jam-packed week of fun, games,
-                friendship, powerful worship, and practical Bible-teaching.</p>
-              <p class="mb-0"><a href="#" class="btn btn-blue">Sign Up
-                  Now</a>
-              </p>
-            </div>
-          </div>
-          <div>
-            <div class="position-relative ratio-square bg-fuscia">
-              <div
-                class="fullscreen background-cover background-bottom o-20 grayscale"
-                style="background-image: url('https://images.unsplash.com/photo-1496024840928-4c417adf211d?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <span
+              class="wistia_embed wistia_async_uaxqzj6n5z popover=true popoverContent=link clickable text-center wistia_embed_initialized"
+              style="display:inline; position:relative"
+              id="wistia-uaxqzj6n5z-1">
+              <div id="wistia_29.thumb_container" class="wistia_click_to_play"
+                style="position: relative; display: inline;">
+
+                <a href="#" data-aos="fade-up">
+                  <span class="text-orange fa-stack fa-2x hidden">
+                    <i class="fa-solid fa-circle fa-stack-2x fa-inverse"></i>
+                    <i class="fa-solid fa-circle-play fa-stack-2x"></i>
+                  </span>
+                </a>
+
               </div>
-            </div>
+            </span>
+            <script src="https://fast.wistia.com/embed/medias/uaxqzj6n5z.jsonp"
+              async=""></script>
+            <script src="https://fast.wistia.com/assets/external/E-v1.js"
+              async=""></script>
+
+
           </div>
         </div>
       </div>
     </section>
 
-    <section id="go" class="bg-blue text-white">
-      <div class="text-constained mx-auto text-center">
-        <h2 class="display-2">Go to Gauntlet</h2>
+
+    <section id="about" class="bg-white">
+      <div class="text-constrained mx-auto text-center">
+        <h2 class="display-2">What is Gauntlet?</h2>
+        <p>Gauntlet is a week-long student summer camp
+          experience for
+          rising
+          seventh
+          grade students through graduated seniors. Students from across
+          South
+          Carolina will get together for a jam-packed week of fun, games,
+          friendship, powerful worship, and practical Bible-teaching.</p>
+        <p class="mb-0"><a href="#" class="btn btn-primary">Sign Up
+            Now</a>
       </div>
     </section>
 
-    <section id="serve" class="bg-yellow text-white">
-      <div class="text-constained mx-auto text-center">
-        <h2 class="display-2">Serve at Gauntlet</h2>
+    <section id="go" class="bg-secondary text-white">
+      <div class="text-constrained mx-auto text-center">
+        <h2 class="display-1">Go to Gauntlet</h2>
+        <p>Non in velit quis ullamco. Mollit do nisi mollit labore quis irure.
+          Nulla deserunt Lorem ex eiusmod tempor aute amet veniam est pariatur.
+          Non ad anim aute consequat reprehenderit amet dolore id dolore anim ad
+          dolor anim.</p>
+        <p class="mb-0"><a href="#" class="btn btn-primary">Sign Up
+            to Go</a>
       </div>
     </section>
 
-    <section id="give" class="bg-fuscia text-white">
-      <div class="text-constained mx-auto text-center">
-        <h2 class="display-2">Give to Gauntlet</h2>
+    <section id="serve" class="bg-primary text-white">
+      <div class="text-constrained mx-auto text-center">
+        <h2 class="display-1">Serve at Gauntlet</h2>
+        <p>Non in velit quis ullamco. Mollit do nisi mollit labore quis irure.
+          Nulla deserunt Lorem ex eiusmod tempor aute amet veniam est pariatur.
+          Non ad anim aute consequat reprehenderit amet dolore id dolore anim ad
+          dolor anim.</p>
+        <p class="mb-0"><a href="#" class="btn btn-secondary">Sign Up
+            to Serve</a>
+      </div>
+    </section>
+
+    <section id="give" class="bg-white">
+      <div class="text-constrained mx-auto text-center">
+        <h2 class="display-1">Give to Gauntlet</h2>
+        <p>Non in velit quis ullamco. Mollit do nisi mollit labore quis irure.
+          Nulla deserunt Lorem ex eiusmod tempor aute amet veniam est pariatur.
+          Non ad anim aute consequat reprehenderit amet dolore id dolore anim ad
+          dolor anim.</p>
+        <p class="mb-0"><a href="#" class="btn btn-primary">Give Now</a>
       </div>
     </section>
 
   </div>
 
   <section
-    class="position-relative px-5 py-8 p-md-8 bg-purple text-white text-center text-md-left">
-    <div class="fullscreen bg-black o-90"></div>
-    <div class="d-grid grid-cols-1 grid-cols-md-2 bring-forward">
-      <div>
-        <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo"
-          class="mb-3" style="width: 40px; max-width: 40px" />
-        <h6 class="font-black text-uppercase">NewSpring Church</h6>
-        <p class="font-sans font-black tracking-tight text-uppercase mb-0">
-          <small><a href="https://www.rockrms.com"
-              class="text-white text-hover-white text-decoration-none"
-              target="_blank">Built on
-              <span class="position-relative fa-layers fa-lg fa-fw mx-1"
-                style="top: 3px">
-                <i class="fa-solid fa-circle" style="color: white"
-                  aria-hidden="true"></i>
-                <i class="fa-inverse fa-brands fa-rockrms"
-                  style="color: #ee7725; transform: scale(1.1)"
-                  data-fa-transform="shrink-6" aria-hidden="true"></i>
-              </span>
-              Rock RMS</a></small>
-        </p>
+    class="position-relative px-5 py-8 p-md-8 bg-slate text-white text-center text-md-left">
+    <div class="page-constrained mx-auto">
+      <div class="d-grid grid-cols-1 grid-cols-md-2 bring-forward">
+        <div>
+          <img src="./Themes/new/Assets/SVG/mark.svg"
+            alt="NewSpring Church Logo" class="mb-3"
+            style="width: 40px; max-width: 40px" />
+          <h6 class="font-black text-uppercase">NewSpring Church</h6>
+          <p class="font-sans font-black tracking-tight text-uppercase mb-0">
+            <small><a href="https://www.rockrms.com"
+                class="text-white text-hover-white text-decoration-none"
+                target="_blank">Built on
+                <span class="position-relative fa-layers fa-lg fa-fw mx-1"
+                  style="top: 3px">
+                  <i class="fa-solid fa-circle" style="color: white"
+                    aria-hidden="true"></i>
+                  <i class="fa-inverse fa-brands fa-rockrms"
+                    style="color: #ee7725; transform: scale(1.1)"
+                    data-fa-transform="shrink-6" aria-hidden="true"></i>
+                </span>
+                Rock RMS</a></small>
+          </p>
+        </div>
       </div>
     </div>
   </section>
